# roboy_models

./: CMakeLists.txt  Component10_1.f3d  README.md  Wrist ring.f3d  ikfast.sh  package.xml
6DOF_arm/: logfile.txt  model.config  model.sdf  model.urdf
ArmTracker/: logfile.txt  model.config  model.sdf
Arm_robot/: model.config  model.sdf
DarkRoomCalibrationObject/: logfile.txt  model.config  model.sdf
FingerTest/: logfile.txt  model.config  model.sdf
FingerTest1/: logfile.txt  model.config  model.sdf
HandSDF/: logfile.txt  model.config  model.sdf
LeftHand/: logfile.txt  model.config  model.sdf
NSTarm/: model.config  model.sdf
NewFingerTest/: logfile.txt  model.config  model.sdf  model.urdf
OnefingerWCasprsdf/: logfile.txt  model.sdf  model.urdf
PaBiRoboy/: model.config  model.sdf
PaBiRoboy_demo_simplified/: model.config  model.sdf
PaBiRoboy_simplified/: model.config  model.sdf
Roboy/: model.config  model.sdf
Roboy2.0_Head_simplified/: Roboy2.0_Head_simplified.gv  logfile.txt  model.config  model.sdf  model.urdf
Roboy2.0_Upper_Body_Xylophone_simplified/: logfile.txt  model.config  model.sdf
Roboy2.0_Upper_Body_simplified/: logfile.txt  model.config  model.sdf
Roboy_simplified/: model.config  model.sdf
Roboy_simplified_moveable/: model.config  model.sdf
Roboy_with_camera_simplified/: model.config  model.sdf
TestCube/: calibration.yaml  logfile.txt  model.config  model.sdf
TestRobot/: logfile.txt  model.config  model.sdf  model.urdf
ViveBaseStation/: model.config  model.sdf
arm_robot-mit_VISCOL/: arm_robot.sdf  arm_robot.urdf  arm_robot_ext_controller.sh  controller.py  marker_sphere.urdf  model.config
arm_simplified/: model.config  model.sdf
cable_robot_6dof/: logfile.txt  model.config  model.sdf  model.urdf
cup_table/: logfile.txt  model.config  model.sdf
full_roboy/: model.config  model.sdf
hands/: model.config  model.sdf
handsdf_initpose/: logfile.txt  model.config  model.sdf
handsdf_little_joint/: logfile.txt  model.config  model.sdf
left_hand/: logfile.txt  model.config  model.sdf  model.urdf
left_hand_model/: logfile.txt  model.config  model.sdf  model.urdf
legs_with_muscles_simplified/: model.sdf
legs_with_upper_body/: model.config  model.sdf  model_fix.sdf  model_inverted_pendulum.sdf
legs_with_upper_body_simplified/: model.config  model.sdf
legs_with_upper_body_with_camera_simplified/: model.config  model.sdf
makeHuman_avatar/: model.config  model.sdf
msj_platform/: logfile.txt  model.config  model.sdf  model.urdf
musc-le/: cardsflow.xml  logfile.txt  model.config  model.sdf
musc_arm/: model.config  model.sdf  model.urdf  model_stl.sdf
myo_test_bed/: logfile.txt  (+4 more)
(+1075 files in other folders)
